@startuml scorecard

skinparam monochrome false
skinparam classFontStyle bold
skinparam linetype ortho

' ── Enum ─────────────────────────────────────────────────────
enum CriterionScore {
  Points(PointsType)
  Autofail
  NotApplicable
}

' ── Trait ────────────────────────────────────────────────────
interface "ScorecardComponent<T>" as ScorecardComponent {
  + get_numerator(sel: T) : PointsType
  + get_denominator(sel: T) : PointsType
  + is_autofail(sel: T) : bool
  + get_score(sel: T) : f64
}

' ── Struct: Criterion ────────────────────────────────────────
class Criterion {
  - options : HashMap<String, CriterionScore>
  + get_numerator(sel: &str) : PointsType
  + get_denominator(sel: &str) : PointsType
  + is_autofail(sel: &str) : bool
}

' ── Struct: Scorecard ────────────────────────────────────────
class Scorecard {
  - criteria : HashMap<String, Criterion>
  + get_numerator(sel) : PointsType
  + get_denominator(sel) : PointsType
  + is_autofail(sel) : bool
  + {static} from_csv_string(csv: &str) : Result<Scorecard, String>
}

' ── Relationships ────────────────────────────────────────────
Criterion ..|> ScorecardComponent
Scorecard ..|> ScorecardComponent

Scorecard      "1" *-- "0..*" Criterion
Criterion      "1" *-- "0..*" CriterionScore


@enduml